PS-2017.1.4 <michmato@Michals-MacBook-Pro.local Update SVP.xml, vim_settings.xml, pomodoro.state.xml, JavaScript.xml	Create editor.codeinsight.xml

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -18,7 +18,7 @@
       <option name="JSX_HTML" value="false" />
     </context>
   </template>
-  <template name="require" value="const $module$ = require('$lcmodule$');&#10;$END$" description="require a node.js module" toReformat="false" toShortenFQNames="true">
+  <template name="req" value="const $module$ = require('$lcmodule$');&#10;$END$" description="require a node.js module" toReformat="false" toShortenFQNames="true">
     <variable name="module" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="lcmodule" expression="lowercaseAndDash(module)" defaultValue="" alwaysStopAt="true" />
     <context>
